   - New source files for decoding and converting
   - Separated q-encoding and quoted printable encoding
   - Number of lines (of mail body) to be read is now a constant
   - Bugfix: Setting file permissions of scripts in configure script
     (fixes bug #1083485)
   - Marked strings for translation (GNOME menu entries)
   - Bugfix: DoS attacks in IDLE command (IMAP4)
   - Bugfix: Hanging of local mailboxes

Version 2.0.3
  * Roland Stigge:
    - Updated man page (section 1, "GTK+")
  * Robert Sowada:
    - Changed version to 2.0.3
    - Various small changes and bugfixes
    - Updated german translation, updated po files
    - Gnome version can determine itself if in standalone mode or panel mode
    - Removed "--gtk" option, added "--applet" option in debug mode instead
    - Added "--version" option to all versions of gnubiff
    - "--help" option handled by "poptPrintHelp" in all versions of gnubiff
    - Removed messages that are no longer necessary
    - Bugfix: return value of main
    - Output of "--help" restructured
    - Code for saving the configuration file cleaned up
    - Bugfix: Autodetection of IMAP
    - Bugfix: Failure of select command (IMAP)
    - Bugfix: Failure of opening connection (IMAP)
    - Security Bugfix: DoS attacks by sending unterminated lines anticipated
      (if SSL is used, this was fixed for non-SSL connections in 2.0.2)
    - Bugfix: Handling network writing/reading errors
    - Bugfix/Feature: Support for international Mailbox names for IMAP
    - Security Bugfix: DoS attacks by sending a unterminated response to the
      SELECT, SEARCH, FETCH (IMAP) and TOP (POP3) commands anticipated
    - Bugfix: User set value for maximum number of mail to be collected is now
      respected (IMAP)
    - Bugfix: Fetching mails is no longer stopped if certain strings are in
      mail or mail header (IMAP)
    - Bugfix: First lines of email content are now displayed (IMAP)